--- a/overlay/frameworks/base/packages/SystemUI/res/values/dimens.xml
+++ b/overlay/frameworks/base/packages/SystemUI/res/values/dimens.xml
@@ -29,4 +29,8 @@
 
     <!-- Bottom margin size when fingerprint in display is active -->
     <dimen name="keyguard_indication_margin_bottom">30dp</dimen>
+    
+    <!-- Radius of the software rounded corners at the bottom of the display in its natural
+    orientation. If zero, the value of rounded_corner_radius is used. -->
+    <dimen name="rounded_corner_content_padding">6dp</dimen>
 </resources>
