raphael: overlay: center FOD animation
Change-Id: I54c0c53cfed46c4d24da2941a00e7bd2161e0b7d
Signed-off-by: Joey Huab <joey@evolution-x.org>

FOD Animation Flag

--- a/overlay-kangos/packages/apps/Settings/res/values/config.xml
+++ b/overlay-kangos/packages/apps/Settings/res/values/config.xml
@@ -23,6 +23,9 @@
     -->
     <integer name="config_fingerprintSensorLocation">4</integer>
 
+	<!-- FOD recognizing animation -->
+    <bool name="config_showFODAnimationSettings">true</bool>
+
     <!-- Screen off FOD -->
     <bool name="config_supportScreenOffFod">true</bool>
 
