--- a/parts/res/xml/doze_settings.xml
+++ b/parts/res/xml/doze_settings.xml
@@ -26,11 +26,11 @@
         android:persistent="false" />
 
     <SwitchPreference
-        android:key="gesture_raise_to_wake"
+        android:key="raise_to_wake"
         android:defaultValue="false"
         android:icon="@drawable/ic_doze_wake"
-        android:title="@string/wake_gesture_title"
-        android:summary="@string/wake_gesture_summary" />
+        android:title="@string/raise_to_wake_title"
+        android:summary="@string/raise_to_wake_summary" />
 
     <PreferenceCategory
         android:key="pickup_sensor"
