--- a/overlay-yaap/frameworks/base/core/res/res/values/config.xml
+++ b/overlay-yaap/frameworks/base/core/res/res/values/config.xml
@@ -19,4 +19,8 @@
     
     <!-- Is the battery LED intrusive? Used to decide if there should be a disable option -->
     <bool name="config_intrusiveBatteryLed">true</bool>
+
+    <!-- Shows the required view for in-display fingerprint -->
+    <bool name="config_needCustomFODView">true</bool>
+
 </resources>
